--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -41,7 +41,7 @@
       // Check if setup is complete
       const status = await App.getSetupStatus();
       if (!status.setupComplete) {
-        window.location.href = '/admin/setup';
+        window.location.href = '/setup/';
         return;
       }
 
